--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="text"></span>
             <p>Estudante de tecnologia da Informação <br> Aspirante a desenvolvedor de sistemas<br> Front-end e
                 Back-end.</p>             
-            <a href="pdf/Curriculo.pdf" target="_blank" class="btn">Download CV</a>
+            <a href="#contact" target="_blank" class="btn">Download CV</a>
             
             
         </div>
@@ -75,7 +75,7 @@
                         <span>alysson.rcgabriel@senacsp.edu.br</span>
                     </div>
                 </div>
-                <a href="pdf/Curriculo.pdf" target="_blank" class="btn">Download CV</a>
+                <a href="#contact" target="_blank" class="btn">Download CV</a>
             </div>
         </div>
     </section>
